<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_digital_converter"
        android:textAlignment="center"
        android:textColor="#FAF8F8"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<<<< Temporary merge branch 1
        android:layout_marginBottom="432dp"
=========
        android:layout_marginBottom="436dp"
>>>>>>>>> Temporary merge branch 2
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="numberDecimal"
<<<<<<<<< Temporary merge branch 1
        android:textColor="#F4EDED"
=========
        android:textColor="@color/white"
>>>>>>>>> Temporary merge branch 2
        android:textColorHint="#ECCCCC"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
<<<<<<<<< Temporary merge branch 1
        app:layout_constraintHorizontal_bias="0.496"
=========
>>>>>>>>> Temporary merge branch 2
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:text="@string/miles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/centimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centimeter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:width="200sp"
<<<<<<<<< Temporary merge branch 1
        android:hint="output:"
        android:textColor="#E1D3D3"
=========
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="#F4F1F1"
>>>>>>>>> Temporary merge branch 2
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <TextView
        android:id="@+id/converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_2023"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />


</androidx.constraintlayout.widget.ConstraintLayout>